syntax = "proto3";

import "components/enums/pixelOwners.proto";
import "components/enums/pixelTypes.proto";
import "components/schemas/relativeCoordinate.proto";

option csharp_namespace = "GrpcGeneratedServices";
package Game;

message IncrementalMapUpdateRequest {

}

message IncrementalMapUpdateResponse {
  repeated IncrementalMapUpdate updates = 1;

  message IncrementalMapUpdate {
    RelativeCoordinate spawnRelativeCoordinate = 1;
    PixelTypes type = 2;
    PixelOwners owner = 3;
    bool ownPixel = 4;
  }  
}

message MiscStateUpdateRequest {

}

message MiscStateUpdateResponse {
  uint32 pixelBucket = 1;
}

service StateUpdate {
  rpc GetIncrementalMapUpdate(IncrementalMapUpdateRequest) returns (stream IncrementalMapUpdateResponse);
  rpc GetMiscGameStateUpdate(MiscStateUpdateRequest) returns (stream MiscStateUpdateResponse);
}